features: ajout de l'authentification

--- a/templates/admin/property/index.html.twig
+++ b/templates/admin/property/index.html.twig
@@ -30,7 +30,7 @@
 <form method="post" action="{{ path('admin.property.delete', {id: property.id}) }}" style="display: inline-block" onsubmit="return confirm('Êtes vous vraiment sûr ?'">
 <input type="hidden" name="_method" value="DELETE">
 <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ property.id)}}">
-<button class"'btn btn-danger">Supprimer</button>
+<button class="btn btn-danger">Supprimer</button>
 </form>
 </td>
 </tr>
