--- a/templates/admin/property/new.html.twig
+++ b/templates/admin/property/new.html.twig
@@ -8,3 +8,14 @@
 </div>
 
 {% endblock %}
+
+{% block stylesheets %}
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.9/css/select2.min.css">
+{% endblock %}
+
+{% block javascripts %}
+<script src='https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.9/js/select2.min.js'></script>
+<script>
+ $('select').select2();
+</script>
+{% endblock %}
