--- a/templates/admin/option/new.html.twig
+++ b/templates/admin/option/new.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
 <div class="container-mt4">
-    <h1>Créer une nouvelle boption</h1>
+    <h1>Créer une nouvelle option</h1>
     {{ include ('admin/option/_form.html.twig', {button: 'Créer'}) }}
 </div>
 
