--- a/templates/admin/property/new.html.twig
+++ b/templates/admin/property/new.html.twig
@@ -2,20 +2,9 @@
 
 {% block body %}
 
-<div class="container-mt4">
+<div class="container mt-4">
     <h1>Créer un nouveau bien</h1>
     {{ include ('admin/property/_form.html.twig', {button: 'Créer'}) }}
 </div>
 
-{% endblock %}
-
-{% block stylesheets %}
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.9/css/select2.min.css">
-{% endblock %}
-
-{% block javascripts %}
-<script src='https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.9/js/select2.min.js'></script>
-<script>
- $('select').select2();
-</script>
 {% endblock %}
