--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -12,7 +12,14 @@
     <h2>Les derniers biens</h2>
     <div class="row flex">
         {% for property in properties %}
-            <div class="col-3">
+            <div class="col-md-3">
+            <div class="card mb-4">
+            {% if property.filename %}
+            <img src="{{ vich_uploader_asset(property, 'imageFile') | imagine_filter('thumb') }}" alt="card-img-top" style="width: 100%; height: auto">
+            {% else %}
+                <img src="{{ '/images/properties/empty.jpg' | imagine_filter('thumb') }}" alt="card-img-top" style="width: 100%; height: auto">
+            {% endif %}
+            </div>
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">
