features: photos multiples

--- a/templates/pages/home.html.twig
+++ b/templates/pages/home.html.twig
@@ -13,22 +13,7 @@
     <div class="row flex">
         {% for property in properties %}
             <div class="col-md-3">
-            <div class="card mb-4">
-            {% if property.filename %}
-            <img src="{{ vich_uploader_asset(property, 'imageFile') | imagine_filter('thumb') }}" alt="card-img-top" style="width: 100%; height: auto">
-            {% else %}
-                <img src="{{ '/images/properties/empty.jpg' | imagine_filter('thumb') }}" alt="card-img-top" style="width: 100%; height: auto">
-            {% endif %}
-            </div>
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">
-                            <a href="{{ path('property.show', {id: property.id, slug: property.slug}) }}">{{ property.title }}</a>
-                        </h5>
-                        <p class="card-text">{{ property.city }} ({{ property.postalCode}})</p>
-                        <div class="text-primary" style="font-weight: bold;font-size: 2rem;" >{{ property.formattedPrice }} €</div>
-                    </div>
-                </div>
+                {% include 'property/_property.html.twig' %}
             </div>
         {% endfor %}
     </div>
