--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -7,11 +7,7 @@
         <div class="container">
         <div class="row">
            <div class="col-md-8">  
-            {% if property.filename %}
-            <img src="{{ vich_uploader_asset(property, 'imageFile') | imagine_filter('medium') }}" alt="card-img-top" style="width: 100%; height: auto">
-            {% else %}
-                <img src="{{ '/images/properties/empty.jpg' | imagine_filter('medium') }}" alt="card-img-top" style="width: 100%; height: auto">
-            {% endif %}
+ {% include 'property/_property.html.twig' %}
             </div>
         <div class="col-md-4">
             <h1>{{ property.title }}</h1>
