feature: contact form

--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -7,18 +7,37 @@
         <div class="container">
         <div class="row">
            <div class="col-md-8">  
- {% include 'property/_property.html.twig' %}
+            {% if property.picture %}
+            <img src="{{ vich_uploader_asset(property.picture, 'imageFile') | imagine_filter('medium') }}" alt="card-img-top" style="width: 100%; height: auto">
+            {% else %}
+                <img src="{{ '/images/properties/empty.jpg' | imagine_filter('medium') }}" alt="card-img-top" style="width: 100%; height: auto">
+            {% endif %}
             </div>
         <div class="col-md-4">
             <h1>{{ property.title }}</h1>
             <h2>{{ property.rooms }} pièces - {{ property.surface }} m²</h2>
             <div class="text-primary" style="font-size: 4rem;font-weight: bold;">{{ property.formattedPrice }} €</div>
             <a href="#" class="btn btn-primary">Contacter l'agence</a>
+                      <div id="contactForm" class="mt-4">
+            {{ form_start(form) }}
+            <div class="row">
+              <div class="col">{{ form_row(form.firstname) }}</div>
+              <div class="col">{{ form_row(form.lastname) }}</div>
+            </div>
+            <div class="row">
+              <div class="col">{{ form_row(form.phone) }}</div>
+              <div class="col">{{ form_row(form.email) }}</div>
+            </div>
+            {{ form_rest(form) }}
+            <div class="form-group">
+              <button class="btn btn-primary">Envoyer</button>
+            </div>
+            {{ form_end(form) }}
+          </div>
         </div>
-        </div>
-        <nav class="nav nav-tabs" id="tab"></nav>
-        </div>
-</div>
+      </div>
+    </div>
+  </div>
     <div class="container mt-4">
         <p>
         {{ property.description | nl2br }}
