feature: map bugged

--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -7,10 +7,12 @@
         <div class="container">
         <div class="row">
            <div class="col-md-8">  
-            {% if property.picture %}
-            <img src="{{ vich_uploader_asset(property.picture, 'imageFile') | imagine_filter('medium') }}" alt="card-img-top" style="width: 100%; height: auto">
-            {% else %}
+            {% if property.pictures is empty %}
                 <img src="{{ '/images/properties/empty.jpg' | imagine_filter('medium') }}" alt="card-img-top" style="width: 100%; height: auto">
+            {% else %}
+            {% for picture in property.pictures %}
+            <img src="{{ vich_uploader_asset(picture, 'imageFile') | imagine_filter('medium') }}" alt="card-img-top" style="width: 100%; height: auto">
+            {% endfor %}
             {% endif %}
             </div>
         <div class="col-md-4">
@@ -77,5 +79,6 @@
         </ul>
         </div>
         </div>
+        <div id="map" style="width:100%; height: 400px" data-lat="{{ property.lat }}" data-lng="{{ property.lng }}"></div>
     </div>
 {% endblock %}
