feature: map ok

--- a/templates/property/index.html.twig
+++ b/templates/property/index.html.twig
@@ -18,6 +18,14 @@
 </div>
 <div class="col">
 <div class="form-group">
+ <input type="text" value="" placeholder="Adresse" id="search_address" class="form-control"/>
+</div>
+</div>
+<div class="col">
+{{ form_row(form.distance) }}
+</div>
+<div class="col">
+<div class="form-group">
 <button class="btn btn-primary">Rechercher</button>
 </div>
 </div>
