--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -32,8 +32,8 @@
         </div>
         <div class="col-md-4">
           <h1>{{ property.title }}</h1>
-          <h2>{{ property.rooms }} piÃ¨ces - {{ property.surface }} mÂ²</h2>
-          <div class="text-primary" style="font-size: 4rem;font-weight: bold;">{{ property.formattedPrice }} â‚¬</div>
+          <h2>{{ property.rooms }} pièces - {{ property.surface }} m²</h2>
+          <div class="text-primary" style="font-size: 4rem;font-weight: bold;">{{ property.formattedPrice }} €</div>
           <a href="#" class="btn btn-primary" id="contactButton"{% if form.vars.submitted %} style="display: none;"{% endif %}>Contacter l'agence</a>
           <div id="contactForm" class="mt-4"{% if not form.vars.submitted %} style="display: none;"{% endif %}>
             {{ form_start(form) }}
@@ -62,14 +62,14 @@
 
     <div class="row">
       <div class="col-md-8">
-        <h2>CaractÃ©ristiques</h2>
+        <h2>Caractéristiques</h2>
         <table class="table table-striped">
           <tr>
             <td>Surface habitable</td>
-            <td>{{ property.surface }} mÂ²</td>
+            <td>{{ property.surface }} m²</td>
           </tr>
           <tr>
-            <td>PiÃ¨ces</td>
+            <td>Pièces</td>
             <td>{{ property.rooms }}</td>
           </tr>
           <tr>
@@ -87,7 +87,7 @@
         </table>
       </div>
       <div class="col-md-4">
-        <h2>SpÃ©cificitÃ©s</h2>
+        <h2>Spécifications</h2>
         <ul class="list-group">
           {% for option in property.options %}
           <li class="list-group-item">{{ option.name }}</li>
