feature: search address form

--- a/templates/property/index.html.twig
+++ b/templates/property/index.html.twig
@@ -17,9 +17,7 @@
           {{ form_row(form.options) }}
         </div>
         <div class="col">
-          <div class="form-group">
-          <input type="text" value="" placeholder="Adresse" id="search_address" class="form-control"/>
-          </div>
+          {{ form_row(form.address, {id: 'search_address'}) }}
         </div>
         <div class="col">
           {{ form_row(form.distance) }}
