--- a/templates/property/_property.html.twig
+++ b/templates/property/_property.html.twig
@@ -1,19 +1,20 @@
+{% cache 'property' ~ property.id property.updatedAt.timestamp|default(date('2019-01-01 00:00:00').timestamp) %}
 <div class="card mb-4">
-{% if property.picture %}
-<img src="{{ vich_uploader_asset(property.picture, 'imageFile') | imagine_filter('thumb') }}" alt="card-img-top" style="width: 100%; height: auto">
-{% else %}
-    <img src="{{ '/images/empty.jpg' | imagine_filter('thumb') }}" alt="card-img-top" style="width: 100%; height: auto">
-{% endif %}
-<div class="card-body">
-<h5 class="card-title">
-<a href="{{ path('property.show', {slug: property.slug, id: property.id}) }}">
-{{ property.title }}
-</a>
-</h5>
-<p class="card-text">{{ property.description | nl2br }}</p>
-<p class="card-text">{{ property.surface}} m² - {{ property.city }} ({{ property.postalCode }})</p>
-<div class="card-primary" style="font-size:2rem; font-weight: bold;">
-{{ property.formattedPrice }} €
+  {% if property.picture %}
+    <img src="{{ vich_uploader_asset(property.picture, 'imageFile') | imagine_filter('thumb') }}" alt="card-img-top" style="width: 100%; height:auto;">
+    {% else %}
+      <img src="{{ '/images/empty.jpg' | imagine_filter('thumb') }}" alt="card-img-top" style="width: 100%; height:auto;">
+  {% endif %}
+  <div class="card-body">
+    <h5 class="card-title">
+      <a href="{{ path('property.show', {slug: property.slug, id: property.id}) }}">
+        {{ property.title }}
+      </a>
+    </h5>
+    <p class="card-text">{{ property.surface }} m² - {{ property.city }} ({{ property.postalCode }})</p>
+    <div class="text-primary" style="font-size:2rem; font-weight: bold;">
+      {{ property.formattedPrice }} €
+    </div>
+  </div>
 </div>
-</div>
-</div>
+{% endcache %}
