--- a/templates/property/show.html.twig
+++ b/templates/property/show.html.twig
@@ -14,7 +14,7 @@
 
       {% if not form.vars.valid %}
         <div class="alert alert-danger">
-          Erreur je ne sais pas quoi
+          Erreur champ invalide
         </div>
       {% endif %}
 
